[gd_scene load_steps=9 format=3 uid="uid://cshsnxckgrty0"]

[ext_resource type="Script" uid="uid://dnb3p1ha84qf7" path="res://scripts/arena/arena_test.gd" id="1_kic2s"]
[ext_resource type="PackedScene" uid="uid://b6k5dsgdg03y4" path="res://scenes/ui/hud.tscn" id="2_hudov"]

[sub_resource type="PlaneMesh" id="PlaneMesh_kgjki"]
size = Vector2(80, 80)

[sub_resource type="BoxShape3D" id="BoxShape3D_kgjki"]
size = Vector3(80, 1, 80)

[sub_resource type="BoxShape3D" id="BoxShape3D_kic2s"]
size = Vector3(4, 3, 4)

[sub_resource type="BoxMesh" id="BoxMesh_kic2s"]
size = Vector3(4, 3, 4)

[sub_resource type="BoxMesh" id="BoxMesh_hudov"]
size = Vector3(4, 3, 4)

[sub_resource type="BoxMesh" id="BoxMesh_tucbp"]
size = Vector3(4, 3, 4)

[node name="Arena" type="Node3D"]
script = ExtResource("1_kic2s")

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="PlayerSpawn" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.770126, 1.5, 0)

[node name="BotSpawn1" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1.5, 6)

[node name="BotSpawn2" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.5, -6)

[node name="Floor" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("PlaneMesh_kgjki")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("BoxShape3D_kgjki")

[node name="Obstacle1" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 12)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacle1"]
shape = SubResource("BoxShape3D_kic2s")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Obstacle1"]
mesh = SubResource("BoxMesh_kic2s")

[node name="Obstacle2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1.5, -8)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Obstacle2"]
mesh = SubResource("BoxMesh_hudov")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacle2"]
shape = SubResource("BoxShape3D_kic2s")

[node name="Obstacle3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 1.5, -2)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Obstacle3"]
mesh = SubResource("BoxMesh_tucbp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacle3"]
shape = SubResource("BoxShape3D_kic2s")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.8326419, -0.39128512, -0.39192262, -0.003560394, -0.71144956, 0.7027282, -0.5538002, -0.5837255, -0.59377587, 0, 11.166851, -8.6865635)
shadow_enabled = true

[node name="HUD" type="CanvasLayer" parent="." instance=ExtResource("2_hudov")]
